// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should create a Switch in dark mode 1`] = `
<DocumentFragment>
  <div
    class="switch"
  >
    <i
      class="ri-sun-line"
    />
  </div>
</DocumentFragment>
`;

exports[`Switch should create a Switch in light mode 1`] = `
<DocumentFragment>
  <div
    class="switch"
  >
    <i
      class="ri-moon-line"
    />
  </div>
</DocumentFragment>
`;
